# Mimi

./: .gitignore  CLAUDE.md  CUSTOM_CLASSIFICATION.md  INTERACTIVE_LEARNING.md  README.md  sources.example.yaml
analyze/: classify_rules.custom.yaml.example  classify_rules.yaml  pyproject.toml  test_similarity.py
analyze/src/analyze/: classifier.py  cli.py  entities.py  improve.py  models.py  people.py  suggest.py
analyze/tests/: test_classifier.py  test_entities.py  test_people.py
dashboard/: package.json
dashboard/src/components/: ClassificationBreakdown.svelte  DocumentationGaps.svelte  FilterStatus.svelte  IssueList.svelte  KeywordCloud.svelte  KeywordCooccurrence.svelte  KeywordNetwork.svelte  KeywordTypeMatrix.svelte  KeywordVolumeChart.svelte  PeopleActivity.svelte  PeopleKeywordMatrix.svelte  ServiceVolumeChart.svelte  TemporalKeywordFlow.svelte
dashboard/src/lib/: colors.ts  store.ts  types.ts
dashboard/src/pages/: index.astro
data/samples/: analyzed.json  gathered.json
gather/: pyproject.toml
gather/src/gather/: cli.py  config.py  consolidator.py  models.py
gather/src/gather/connectors/: __init__.py  base.py  github.py  jira.py  slack.py
gather/tests/: test_cli.py  test_config.py  test_consolidator.py  test_github_connector.py  test_jira_connector.py  test_slack_connector.py
