[project]
name = "analyze"
version = "0.1.0"
description = "NLP analysis of consolidated support tickets"
requires-python = ">=3.12"
dependencies = [
    "spacy>=3.7",
    "networkx>=3.0",
    "rapidfuzz>=3.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
analyze = "analyze.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyze"]

[tool.pytest.ini_options]
testpaths = ["tests"]
